// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button is backwards compatible (using text prop instead of children) 1`] = `
<div
  className="theme-base"
>
  <div
    className=""
  >
    <div
      className="buttonGroup"
    >
      <button
        className=" button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Back
      </button>
    </div>
  </div>
</div>
`;

exports[`Button renders button properly 1`] = `
<div
  className="theme-base"
>
  <div
    className=""
  >
    <div
      className="buttonGroup"
    >
      <button
        className=" button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Back
      </button>
    </div>
  </div>
</div>
`;

exports[`Button renders button properly with underneath label 1`] = `
<div
  className="theme-base"
>
  <div
    className=""
  >
    <div
      className="buttonGroup"
    >
      <button
        className=" button"
        disabled={false}
        onClick={[Function]}
        type="link"
      >
        Button
      </button>
      <label
        className="underneathLabel"
      >
        My label
      </label>
    </div>
  </div>
</div>
`;

exports[`Button renders link properly 1`] = `
<div
  className="theme-base"
>
  <div
    className=""
  >
    <a
      className=" linkButton"
      href="http://www.aimementoring.com"
      target="_blank"
    >
      Link button
    </a>
  </div>
</div>
`;
